@@ -5,7 +5,6 @@ Required for alpha 2
 --------------------
 
 Find/fix prompt problem reported by @lizby
-Increase timeout for CONSOLE GETCURSOR
 Fix syntax highlighting for comments
 Implement support for ~ at start of paths
 Implement JSON$()
