@@ -1,6 +1,7 @@
 #if !defined(UTILITY_H)
 #define UTILITY_H
 
+#include <stdint.h>
 #include <stdlib.h>
 #include <time.h>
 
@@ -61,5 +62,11 @@ char *append_path(const char *head, const char *tail, char *result, size_t sz);
  *                        otherwise sets 'errno' and returns NULL.
  */
 char *munge_path(const char *original_path, char *new_path, size_t sz);
+
+/**
+ * Gets the number of nanoseconds elapsed since the epoch
+ * ( 00:00:00 on January 1, 1970, Coordinated Universal Time.)
+ */
+uint64_t time_now_ns();
 
 #endif
